--- a/.air.toml
+++ b/.air.toml
@@ -1,3 +1,3 @@
 [build]
 bin = "tmp/main"
-cmd = "go build -o tmp/main ./examples/testing/main.go"
+cmd = "go build -o tmp/main ./eg/all-features/main.go"
